--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "lottie-web": "^5.12.2",
+    "primevue": "^3.48.1",
     "simple-vue-camera": "^1.1.3",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
